Sun Dec  3 00:40:47 2000  Christopher Faylor <cgf@cygnus.com>

        * Makefile.in: Use CXX to build the DLL.
        * configure.in: Find correct c++ compiler.
        * configure: Regenerate.

Sat Nov 18 23:53:59 2000  Christopher Faylor <cgf@cygnus.com>

	* utils.sgml: Document new options for ps and strace.

Wed Nov  8 08:49:27 2000 Jason Tishler <jt@dothill.com>

	* mount.cc (main): Call show_cygdrive_info instead of
	show_cygdrive_prefixes.
	* mount.cc (show_cygdrive_prefixes): Remove function.
	* mount.cc (show_cygdrive_info): New function.  Actually,
	show_cygdrive_info is really an enhanced version of
	show_cygdrive_prefixes renamed to show_cygdrive_info that also displays
	the user and system flags.

Wed Nov  8 15:52:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* mkgroup.c (load_netapi): New function to load netapi32.dll functions
	dynamically so that mkgroup works on 9x/ME as well.
	Use corresponding function pointers throughout.
	(usage): Change to `int'. Change text to be conformant to mkpasswd.
	(main): Use `getlongopt' to process options.
	Special handling to create a group entry on 9x/ME.
	* mkpasswd.c (load_netapi): New function to load netapi32.dll functions
	dynamically so that mkpasswd works on 9x/ME as well.
	Use corresponding function pointers throughout.
	(usage): Change to `int'. Change text to be conformant to mkgroup.
	(main): Use `getlongopt' to process options.
	Special handling to create a passwd entry on 9x/ME.
	Change conditional to create an entry for the local administrators
	group when appropriate.

Thu Nov  2  2:01:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* kill.cc (main): Return 1 in case of errors.

Sat Oct 28 01:37:55 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Accomodate newer gcc's which require linking of c++
	programs with g++.  Fixup output for some compilations.
	* cygcheck.cc: Respond to compiler warnings.
	* dumper.cc (main): Ditto.
	* parse_pe.cc (exclusion::sort_and_check): Ditto.